--- a/src/style/app.css
+++ b/src/style/app.css
@@ -32,6 +32,24 @@ h1 {
     background-color: var(--grey);
     color: var(--primary-color);
 }
+.log-in-and-out{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.8rem;
+    color: var(--white);
+  }
+  .user-name{
+    color: var(--white);
+    font-size: 1rem;
+    margin-right: 2rem;
+  }
+  .register{
+    color: var(--light);
+  }
+  .register:hover{
+    color: var(--white);
+  }
 /* //////////////////showcase////////////////////// */
 .intro{
     background: url(../assets/img1.jpg) no-repeat center center/cover;
@@ -234,7 +252,7 @@ color: var(--white);
 
   .error-message{
   color: red;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   }
 /* //////////////////footer ///////////////////////*/
 .footer{
