--- a/src/style/mobile.css
+++ b/src/style/mobile.css
@@ -75,6 +75,11 @@
     width: 15rem;
     margin: 1rem 5rem;
   }
+  .dishes-choosing-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+  }
   .occasions-list {
     margin: 2rem 2rem;
   }
